.omo/evidence/task-18-ch5-gate.txt
## Baseline before task-18 edits
2026-07-08T12:06:09-04:00
$ git status --short
 M .omo/boulder.json
 M .omo/evidence/task-18-ch5-gate.txt
 M .omo/run-continuation/ses_0c241b468ffeuCkDS36rF8DZEG.json
 M src/ir/lower.rs
 M src/parse/parser.rs
?? .omo/start-work/

$ cargo build --release
   Compiling rustcc v0.0.1 (/home/mei/projects/rustcc)
error[E0061]: this function takes 4 arguments but 5 arguments were supplied
    --> src/ir/lower.rs:1324:29
     |
1324 |                 instrs.push(cmp_to_tacky(op, dst_ty, left_val, right_val, tmp.clone()));
     |                             ^^^^^^^^^^^^     ------ unexpected argument #2 of type `OperandType`
     |
note: function defined here
    --> src/ir/lower.rs:1531:4
     |
1531 | fn cmp_to_tacky(op: BinaryOp, left: Val, right: Val, dst: String) -> Instruction {
     |    ^^^^^^^^^^^^
help: remove the extra argument
     |
1324 -                 instrs.push(cmp_to_tacky(op, dst_ty, left_val, right_val, tmp.clone()));
1324 +                 instrs.push(cmp_to_tacky(op, left_val, right_val, tmp.clone()));
     |

error[E0061]: this function takes 3 arguments but 4 arguments were supplied
    --> src/ir/lower.rs:1337:29
     |
1337 |                 instrs.push(binary_to_tacky(op, dst_ty, right_val, tmp.clone()));
     |                             ^^^^^^^^^^^^^^^     ------ unexpected argument #2 of type `OperandType`
     |
note: function defined here
    --> src/ir/lower.rs:1515:4
     |
1515 | fn binary_to_tacky(op: BinaryOp, src: Val, dst: String) -> Instruction {
     |    ^^^^^^^^^^^^^^^
help: remove the extra argument
     |
1337 -                 instrs.push(binary_to_tacky(op, dst_ty, right_val, tmp.clone()));
1337 +                 instrs.push(binary_to_tacky(op, right_val, tmp.clone()));
     |

error[E0382]: use of moved value: `left_val`
    --> src/ir/lower.rs:1429:18
     |
1372 |     left_val: Val,
     |     -------- move occurs because `left_val` has type `Val`, which does not implement the `Copy` trait
...
1405 |                 (left_val, left_ty)
     |                  -------- value moved here
...
1429 |                 (left_val, Val::Var(tmp), OperandType::Double)
     |                  ^^^^^^^^ value used here after move
     |
help: consider cloning the value if the performance cost is acceptable
     |
1405 |                 (left_val.clone(), left_ty)
     |                          ++++++++

error[E0382]: use of moved value: `right_val`
    --> src/ir/lower.rs:1431:33
     |
1373 |     right_val: Val,
     |     --------- move occurs because `right_val` has type `Val`, which does not implement the `Copy` trait
...
1403 |                 (right_val, right_ty)
     |                  --------- value moved here
...
1431 |                 (Val::Var(tmp), right_val, OperandType::Double)
     |                                 ^^^^^^^^^ value used here after move
     |
help: consider cloning the value if the performance cost is acceptable
     |
1403 |                 (right_val.clone(), right_ty)
     |                           ++++++++

Some errors have detailed explanations: E0061, E0382.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `rustcc` (bin "rustcc") due to 4 previous errors

$ ./tests/test_compiler ./target/release/rustcc --chapter 5 --latest-only --bitwise --compound --increment
----------------------------------------------------------------------
Ran 82 tests in 1.273s

OK

## Final after integrating existing dirty lower/parser changes
2026-07-08T12:07:13-04:00
$ git status --short
 M .omo/boulder.json
 M .omo/evidence/task-18-ch5-gate.txt
 M .omo/run-continuation/ses_0c241b468ffeuCkDS36rF8DZEG.json
 M src/ir/lower.rs
 M src/parse/parser.rs
?? .omo/start-work/

$ cargo build --release
    Finished `release` profile [optimized] target(s) in 0.01s

$ ./tests/test_compiler ./target/release/rustcc --chapter 5 --latest-only --bitwise --compound --increment
----------------------------------------------------------------------
Ran 82 tests in 1.248s

OK
